<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="374dp"
        android:layout_height="409dp"
        android:background="@drawable/grid1"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:rowCount="3">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="118dp"
            android:layout_height="136dp"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:contentDescription="@string/space_1"
            android:focusable="true"
            android:onClick="load"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="119dp"
            android:layout_height="133dp"
            android:clickable="true"
            android:contentDescription="@string/space_2"
            android:focusable="true"
            android:onClick="load"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="121dp"
            android:layout_height="132dp"
            android:clickable="true"
            android:contentDescription="@string/space_3"
            android:focusable="true"
            android:onClick="load"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="122dp"
            android:layout_height="133dp"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:contentDescription="@string/space_4"
            android:focusable="true"
            android:onClick="load"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="114dp"
            android:layout_height="133dp"
            android:clickable="true"
            android:contentDescription="@string/space_5"
            android:focusable="true"
            android:onClick="load"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="117dp"
            android:layout_height="126dp"
            android:clickable="true"
            android:contentDescription="@string/space_6"
            android:focusable="true"
            android:onClick="load"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="121dp"
            android:layout_height="128dp"
            android:layout_marginStart="6dp"
            android:clickable="true"
            android:contentDescription="@string/space_7"
            android:focusable="true"
            android:onClick="load"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="118dp"
            android:layout_height="125dp"
            android:clickable="true"
            android:contentDescription="@string/space_8"
            android:focusable="true"
            android:onClick="load"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="116dp"
            android:layout_height="130dp"
            android:clickable="true"
            android:contentDescription="@string/space_9"
            android:focusable="true"
            android:onClick="load"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:background="#832222"
        android:fontFamily="sans-serif"
        android:onClick="reset"
        android:text="@string/reset"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:includeFontPadding="true"
        android:text="@string/welcome_to_tic_tac_toe"
        android:textColor="@color/material_dynamic_secondary30"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>